--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -11,50 +11,52 @@
     {
       "src": "/assets/android-icon-36x36.png",
       "sizes": "36x36",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/png"
     },
     {
       "src": "/assets/android-icon-48x48.png",
       "sizes": "48x48",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/png"
     },
     {
       "src": "/assets/android-icon-72x72.png",
       "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/png"
     },
     {
       "src": "/assets/android-icon-96x96.png",
       "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/png"
     },
     {
       "src": "/assets/android-icon-144x144.png",
       "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/png"
     },
     {
       "src": "/assets/android-icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/apple-icon-120x120.png",
+      "sizes": "120x120",
+      "type": "image/png"
     },
     {
       "src": "/assets/apple-icon-152x152.png",
       "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/apple-icon-180x180.png",
+      "sizes": "180x180",
+      "type": "image/png"
     },
     {
       "src": "/assets/ms-icon-310x310.png",
       "sizes": "310x310",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/png"
     }
   ],
   "categories": ["productivity", "communication", "utilities"],
