--- a/librechat.yaml
+++ b/librechat.yaml
@@ -57,13 +57,13 @@ endpoints:
           # Other Claude models
           - anthropic/claude-opus-4:nitro
           - anthropic/claude-3.7-sonnet:nitro
-          - anthropic/claude-3.7-sonnet:thinking
+          - anthropic/claude-3.7-sonnet:thinking:nitro
           # Google models (no free versions)
           - google/gemini-2.5-flash-preview-05-20:nitro
-          - google/gemini-2.5-flash-preview-05-20:thinking
+          - google/gemini-2.5-flash-preview-05-20:thinking:nitro
           - google/gemini-2.5-pro-preview:nitro
           - google/gemini-2.5-flash-preview:nitro
-          - google/gemini-2.5-flash-preview:thinking
+          - google/gemini-2.5-flash-preview:thinking:nitro
           # Mistral models
           - mistralai/mistral-large-2411:nitro
           - mistralai/mistral-large-2407:nitro
