--- a/.env.example
+++ b/.env.example
@@ -572,6 +572,12 @@ HELP_AND_FAQ_URL=https://librechat.ai
 # must-revalidate: Prevents using stale content when offline
 
 #=====================================================#
+#                      N8N                            #
+#=====================================================#
+N8N_BUSINESS_TOOLS_URL=
+N8N_OUTLOOK_URL=
+
+#=====================================================#
 #                  OpenWeather                        #
 #=====================================================#
 OPENWEATHER_API_KEY=
