--- a/librechat.yaml
+++ b/librechat.yaml
@@ -201,7 +201,7 @@ mcpServers:
     type: sse
     url: https://n8n.metamation.net/mcp/12bd30ab-6657-4d89-95f7-5e6c818d81e6/sse
     headers:
-      X-N8N-API-KEY: "${N8N_API_KEY}"
+      Authorization: "Bearer ${N8N_API_KEY}"
     timeout: 30000
     initTimeout: 15000
     
@@ -209,6 +209,6 @@ mcpServers:
     type: sse
     url: https://n8n.metamation.net/mcp/97a5106e-0b1a-4b61-8818-937f81d6932c/sse
     headers:
-      X-N8N-API-KEY: "${N8N_API_KEY}"
+      Authorization: "Bearer ${N8N_API_KEY}"
     timeout: 30000
     initTimeout: 15000
