Configure Firebase as the file storage strategy

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -1,4 +1,6 @@
 version: 1.2.1
+# File storage strategy - use firebase for Firebase Storage
+fileStrategy: firebase
 interface:
   endpointsMenu: true
   modelSelect: true
