--- a/packages/data-schemas/package.json
+++ b/packages/data-schemas/package.json
@@ -60,14 +60,15 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.0.4"
   },
+  "dependencies": {
+    "mongoose": "^8.12.1"
+  },
   "peerDependencies": {
     "jsonwebtoken": "^9.0.2",
     "keyv": "^5.3.2",
     "klona": "^2.0.6",
     "librechat-data-provider": "*",
     "lodash": "^4.17.21",
-    "meilisearch": "^0.38.0",
-    "mongoose": "^8.12.1",
     "nanoid": "^3.3.7",
     "traverse": "^0.6.11",
     "winston": "^3.17.0",
