--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -39,6 +39,12 @@
       "type": "image/png"
     },
     {
+      "src": "/assets/android-icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "/assets/apple-icon-120x120.png",
       "sizes": "120x120",
       "type": "image/png"
@@ -62,5 +68,32 @@
   "categories": ["productivity", "communication", "utilities"],
   "lang": "en-US",
   "scope": "/",
-  "prefer_related_applications": false
+  "prefer_related_applications": false,
+  "display_override": ["window-controls-overlay", "standalone"],
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "launch_handler": {
+    "client_mode": "focus-existing"
+  },
+  "protocol_handlers": [
+    {
+      "protocol": "web+librechat",
+      "url": "/c/new?url=%s"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "New Chat",
+      "short_name": "New Chat",
+      "description": "Start a new conversation",
+      "url": "/c/new",
+      "icons": [
+        {
+          "src": "/assets/apple-icon-180x180.png",
+          "sizes": "180x180"
+        }
+      ]
+    }
+  ]
 }
