--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,8 +1,9 @@
 {
+  "id": "/",
   "name": "LibreChat",
   "short_name": "LibreChat",
   "description": "An open source chat application with support for multiple AI models",
-  "start_url": "/c/new",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#171717",
   "theme_color": "#171717",
